  This means that escape codes sent by applications running in a terminal
  buffer can change the cursor shape and visibility. However, it also
  means that the |TermCursorNC| highlight group is no longer supported: an
  unfocused terminal window will have no cursor at all (so there is nothing to
  highlight).
• |jobstart()| gained the "term" flag.

TREESITTER

• |LanguageTree:node_for_range()| gets anonymous and named nodes for a range
• |vim.treesitter.get_node()| now takes an option `include_anonymous`, default
  false, which allows it to return anonymous nodes as well as named nodes.
• |treesitter-directive-trim!| can trim all whitespace (not just empty lines)
  from both sides of a node.
• |vim.treesitter.get_captures_at_pos()| now returns the `id` of each capture
• New |TSNode:child_with_descendant()|, which is nearly identical to
  |TSNode:child_containing_descendant()| except that it can return the
  descendant itself.
• |LanguageTree:parse()| optionally supports asynchronous invocation, which is
  activated by passing the `on_parse` callback parameter.

TUI

• The builtin UI declares info |nvim_set_client_info()| on its channel. See
  |startup-tui|. To see the current UI info, try this: >
    :lua =vim.api.nvim_get_chan_info(vim.api.nvim_list_uis()[1].chan)
• |log| messages written by the builtin UI client (TUI, |--remote-ui|) are
  now prefixed with "ui" instead of "?".
• The TUI will re-query the terminal's background color when a theme update
  notification is received and Nvim will update 'background' accordingly.

UI

• |vim.ui.open()| (by default bound to |gx|) accepts an `opt.cmd` parameter
  which controls the tool used to open the given path or URL. If you want to
  globally set this, you can override vim.ui.open using the same approach
  described at |vim.paste()|.
• `vim.ui.open()` now supports
  [lemonade](https://github.com/lemonade-command/lemonade) as an option for
  opening urls/files. This is handy if you are in an ssh connection and use